test/regress/cov3-amount-bad-retro-period.test
; Test retroactive decimal comma switch with invalid thousand-mark period
; Covers amount.cc (retroactive switch, bad period spacing)

2024/01/15 Test
    Expenses:Food    1.23,45 EUR
    Assets:Cash

test bal -> 1
__ERROR__
While parsing file "$FILE", line 5:
While parsing posting:
  Expenses:Food    1.23,45 EUR
                   ^^^^^^^^^^^
Error: Incorrect use of thousand-mark period
end test
